[package]
name = "networking"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "networking"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
mongodb = { version = "2.5", features = ["tokio-runtime"] }

# Networking
ipnet = "2.7"
local-ip-address = "0.5"
maxminddb = "0.23"

# Parallel processing
rayon = "1.7"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Logging and environment
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Retry mechanism
backoff = { version = "0.4", features = ["tokio"] }

# Lazy static
lazy_static = "1.4.0"
rand = "0.8.5"
